# AlmostCliquePoly

./: .gitignore  README.md  out_heuristik.csv  runTest.sh
WCELib/: CMakeLists.txt  README.md  library.cpp
WCELib/lib/: costsgraph.cpp  costsgraph.h  searchtreeweighted.cpp
WCELib/lib/algorithms/global_mincut/: minimum_cut_helpers.h
WCELib/lib/common/: configuration.h  definitions.h
WCELib/lib/data_structure/: adjlist_graph.h
WCELib/lib/io/: graph_io.h
evaluation/: eval.ipynb  out_heuristik.csv  out_ln_comps.csv  out_poly_comps.csv
src/: test.jl
src/data_reduction/: heuristic.jl  neighbourhood.jl  polyAlgo.jl
src/helper/: base.jl  cpp_embedding.jl  graph.jl  math.jl  min_cut.jl
